commit updated index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Hello, World!</h1>
     <h2>Hello CS3888</h2>
     <p>I hope I will make it</p>
+    <p>Dating app for students</p>
+    <p>Sharing ride for office workers</p>	
 </body>
 </html>
